# clinops

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  draft_paper.yml
clinops/: __init__.py
clinops/ingest/: __init__.py  fhir.py  flat.py  mimic.py  mimic_iii.py  mimic_tables.py  schema.py
clinops/monitor/: __init__.py  drift.py  quality.py
clinops/orchestrate/: __init__.py  stepfunctions.py  store.py
clinops/preprocess/: __init__.py  icd.py  outliers.py  units.py
clinops/split/: __init__.py  splitters.py
clinops/temporal/: __init__.py  cohort.py  features.py  imputation.py  windower.py
docs/: contributing.md  examples.md  getting-started.md  index.md
docs/api/: ingest.md  monitor.md  orchestrate.md  preprocess.md  split.md  temporal.md
docs/guide/: ingest.md  monitor.md  orchestrate.md  preprocess.md  split.md  temporal.md
examples/: e2e_example.py
examples/notebooks/: 01_getting_started.ipynb  02_icu_mortality_pipeline.ipynb
paper/: paper.bib  paper.md
tests/test_ingest/: test_ingest.py  test_mimic_iii.py  test_mimic_tables.py
tests/test_monitor/: test_monitor.py
tests/test_orchestrate/: test_orchestrate.py
tests/test_preprocess/: test_preprocess.py
tests/test_split/: test_split.py
tests/test_temporal/: test_temporal.py
