[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinops"
version = "0.1.0"
description = "Clinical ML Pipeline Toolkit — bridging raw clinical data and production-ready ML pipelines"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Chaitanya Kasaraneni", email = "kc.kasaraneni@gmail.com" }]
keywords = [
    "healthcare", "clinical", "machine-learning", "bioinformatics",
    "mimic", "fhir", "mlops", "time-series", "icu", "ehr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "pydantic>=2.5",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "loguru>=0.7",
]

[project.optional-dependencies]
fhir = ["fhir.resources>=7.0"]
gcp  = ["google-cloud-storage>=2.13", "google-cloud-bigquery>=3.14"]
aws  = ["boto3>=1.34"]
all  = ["clinops[fhir]", "clinops[gcp]", "clinops[aws]"]
dev  = [
    "clinops[all]",
    "pytest>=7.4", "pytest-cov>=4.1", "pytest-mock>=3.12",
    "black>=24.0", "ruff>=0.3", "mypy>=1.8", "pandas-stubs>=2.1",
    "mkdocs>=1.5", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage      = "https://github.com/chaitanyakasaraneni/clinops"
Documentation = "https://clinops.readthedocs.io"
Repository    = "https://github.com/chaitanyakasaraneni/clinops"
Issues        = "https://github.com/chaitanyakasaraneni/clinops/issues"

[tool.hatch.build.targets.wheel]
packages = ["clinops"]

[tool.black]
line-length    = 100
target-version = ["py312"]

[tool.ruff]
line-length    = 100
target-version = "py312"
select  = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]
ignore  = ["ANN101", "ANN102"]

[tool.mypy]
python_version         = "3.12"
strict                 = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=clinops --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["clinops"]
omit   = ["*/tests/*", "*/examples/*"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
