[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinops"
version = "0.2.0"
description = "Clinical ML Pipeline Toolkit — bridging raw clinical data and production-ready ML pipelines"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Chaitanya Kasaraneni", email = "kc.kasaraneni@gmail.com" }]
keywords = [
    "healthcare", "clinical", "machine-learning", "bioinformatics",
    "mimic", "fhir", "mlops", "time-series", "icu", "ehr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "pydantic>=2.5",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "loguru>=0.7",
]

[project.optional-dependencies]
fhir = ["fhir.resources>=7.0"]
gcp  = ["google-cloud-storage>=2.13", "google-cloud-bigquery>=3.14"]
aws  = ["boto3>=1.34"]
dev  = [
    "pytest>=7.4", "pytest-cov>=4.1", "pytest-mock>=3.12",
    "black==26.1.0", "ruff==0.15.2", "mypy==1.19.1", "pandas-stubs>=2.1",
    "pydantic>=2.5",
    "mkdocs>=1.5", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.24",
    "pre-commit>=3.7",
]

[project.urls]
Homepage      = "https://github.com/chaitanyakasaraneni/clinops"
Documentation = "https://clinops.readthedocs.io"
Repository    = "https://github.com/chaitanyakasaraneni/clinops"
Issues        = "https://github.com/chaitanyakasaraneni/clinops/issues"

[tool.hatch.build.targets.wheel]
packages = ["clinops"]

[tool.black]
line-length    = 100
target-version = ["py312"]

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**"                          = ["ANN"]
"examples/**"                       = ["ANN"]
"clinops/orchestrate/store.py"      = ["ANN401"]
"clinops/orchestrate/stepfunctions.py" = ["ANN401"]

[tool.mypy]
python_version         = "3.12"
strict                 = true
ignore_missing_imports = true
exclude                = ["^tests/", "^examples/", "^venv/"]

[[tool.mypy.overrides]]
module = "clinops.orchestrate.*"
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=clinops --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["clinops"]
omit   = ["*/tests/*", "*/examples/*"]
